actualización de yaml cambio de bigdecimal a double, add Update para client y product
