# msvc-specification/target/generated-sources/openapi/src/main/java/com/msvc/specification/api/dto/ProductDto.java
@@ -7,7 +7,6 @@ import com.msvc.specification.api.dto.ClientDtoAllOf;
 import com.msvc.specification.api.dto.NewProductDto;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-import java.math.BigDecimal;
 import org.openapitools.jackson.nullable.JsonNullable;
 import javax.validation.Valid;
 import javax.validation.constraints.*;
@@ -15,7 +14,7 @@ import javax.validation.constraints.*;
 /**
  * ProductDto
  */
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-09-06T18:16:27.790586600-05:00[America/Lima]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-09-07T15:20:25.015482300-05:00[America/Bogota]")
 public class ProductDto   {
   @JsonProperty("name")
   private String name;
@@ -27,16 +26,16 @@ public class ProductDto   {
   private String category;
 
   @JsonProperty("commission")
-  private BigDecimal commission;
+  private Double commission;
 
   @JsonProperty("limitDeposit")
-  private BigDecimal limitDeposit;
+  private Double limitDeposit;
 
   @JsonProperty("limitWithdrawal")
-  private BigDecimal limitWithdrawal;
+  private Double limitWithdrawal;
 
   @JsonProperty("line")
-  private BigDecimal line;
+  private Double line;
 
   @JsonProperty("id")
   private String id;
@@ -101,7 +100,7 @@ public class ProductDto   {
     this.category = category;
   }
 
-  public ProductDto commission(BigDecimal commission) {
+  public ProductDto commission(Double commission) {
     this.commission = commission;
     return this;
   }
@@ -112,17 +111,16 @@ public class ProductDto   {
   */
   @ApiModelProperty(value = "")
 
-  @Valid
 
-  public BigDecimal getCommission() {
+  public Double getCommission() {
     return commission;
   }
 
-  public void setCommission(BigDecimal commission) {
+  public void setCommission(Double commission) {
     this.commission = commission;
   }
 
-  public ProductDto limitDeposit(BigDecimal limitDeposit) {
+  public ProductDto limitDeposit(Double limitDeposit) {
     this.limitDeposit = limitDeposit;
     return this;
   }
@@ -133,17 +131,16 @@ public class ProductDto   {
   */
   @ApiModelProperty(value = "")
 
-  @Valid
 
-  public BigDecimal getLimitDeposit() {
+  public Double getLimitDeposit() {
     return limitDeposit;
   }
 
-  public void setLimitDeposit(BigDecimal limitDeposit) {
+  public void setLimitDeposit(Double limitDeposit) {
     this.limitDeposit = limitDeposit;
   }
 
-  public ProductDto limitWithdrawal(BigDecimal limitWithdrawal) {
+  public ProductDto limitWithdrawal(Double limitWithdrawal) {
     this.limitWithdrawal = limitWithdrawal;
     return this;
   }
@@ -154,17 +151,16 @@ public class ProductDto   {
   */
   @ApiModelProperty(value = "")
 
-  @Valid
 
-  public BigDecimal getLimitWithdrawal() {
+  public Double getLimitWithdrawal() {
     return limitWithdrawal;
   }
 
-  public void setLimitWithdrawal(BigDecimal limitWithdrawal) {
+  public void setLimitWithdrawal(Double limitWithdrawal) {
     this.limitWithdrawal = limitWithdrawal;
   }
 
-  public ProductDto line(BigDecimal line) {
+  public ProductDto line(Double line) {
     this.line = line;
     return this;
   }
@@ -175,13 +171,12 @@ public class ProductDto   {
   */
   @ApiModelProperty(value = "")
 
-  @Valid
 
-  public BigDecimal getLine() {
+  public Double getLine() {
     return line;
   }
 
-  public void setLine(BigDecimal line) {
+  public void setLine(Double line) {
     this.line = line;
   }
 
